--- a/package.json
+++ b/package.json
@@ -24,9 +24,13 @@
     "@mikro-orm/migrations": "^4.5.9",
     "@mikro-orm/postgresql": "^4.5.9",
     "apollo-server-express": "^2.25.2",
+    "argon2": "^0.28.2",
+    "connect-redis": "^6.0.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.2",
     "graphql": "^15.6.0",
     "pg": "^8.7.1",
+    "redis": "^3.1.2",
     "ts-node": "^10.2.1",
     "type-graphql": "^1.1.1"
   },
