--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/connect-redis": "0.0.17",
     "@types/express": "^4.17.13",
+    "@types/express-session": "^1.17.4",
     "@types/node": "^16.9.6",
+    "@types/redis": "^2.8.32",
     "typescript": "^4.4.3"
   },
   "dependencies": {
