--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/node": "^16.9.6",
     "@types/nodemailer": "^6.4.4",
     "@types/redis": "^2.8.32",
+    "@types/uuid": "^8.3.1",
     "typescript": "^4.4.3"
   },
   "dependencies": {
@@ -35,11 +36,12 @@
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "graphql": "^15.6.0",
+    "ioredis": "^4.27.9",
     "nodemailer": "^6.6.5",
     "pg": "^8.7.1",
-    "redis": "^3.1.2",
     "ts-node": "^10.2.1",
-    "type-graphql": "^1.1.1"
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "mikro-orm": {
     "useTsNode": true,
